--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ h4 {
   font-family: "Rubik", sans-serif;
   font-size: 25px; }
 
+h5 {
+  margin: 20px;
+  font-family: "Rubik", serif;
+  font-size: 15px; }
+
 a {
   color: #4b2a14;
   text-decoration-line: none;
@@ -46,8 +51,39 @@ a {
 
 header {
   position: sticky;
-  z-index: 1000;
-  top: 0px; }
+  top: 0;
+  z-index: 1000; }
+
+#carritoSlidebar {
+  width: fit-content; }
+
+#totalSeccion {
+  width: 90vw;
+  margin: 10px;
+  padding: 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: flex-end;
+  align-items: center; }
+  #totalSeccion a {
+    padding: 5px; }
+
+#top {
+  position: sticky;
+  top: 0;
+  z-index: 1000; }
+
+#topInv {
+  position: sticky;
+  top: 0;
+  z-index: 1000; }
+
+#topAdm {
+  position: sticky;
+  top: 0;
+  z-index: 1000; }
 
 .pestaña {
   color: #fed6e3;
@@ -186,9 +222,6 @@ footer {
 .card {
   height: auto; }
 
-#btn-carrito-delete {
-  margin: 5px 0px 5px 0px; }
-
 .card-img-top {
   margin: 10px 0px 0px 0px; }
 
@@ -234,6 +267,100 @@ footer {
     border-style: none;
     background-color: #b99d9a;
     font-family: "Amiri"; }
+
+#formularioInicio {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center; }
+
+#fondoInicio {
+  margin: 70px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center; }
+
+#contenedorFormInicio {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center; }
+
+#submitButton {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center; }
+
+.botonInicio {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(149, 114, 85, 0.5);
+  width: 40vw;
+  border-radius: 10px;
+  font-size: 15px; }
+
+.botonInicio:hover {
+  background-color: rgba(199, 150, 110, 0.5);
+  color: white; }
+
+#append {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center; }
+  #append #datosVerificados {
+    width: 45vw;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center; }
+    #append #datosVerificados h4 {
+      color: #60a74e;
+      font-size: 20px; }
+    #append #datosVerificados .botonInicio {
+      display: flex;
+      justify-content: center;
+      background-color: rgba(100, 149, 85, 0.5);
+      width: 45vw;
+      border-radius: 10px;
+      color: #3b3b3b; }
+    #append #datosVerificados .botonInicio:hover {
+      background-color: rgba(111, 187, 87, 0.5);
+      color: white; }
+  #append #datosVerificadosIncorrectos {
+    width: 45vw;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center; }
+    #append #datosVerificadosIncorrectos h4 {
+      color: #c03232;
+      font-size: 20px; }
+    #append #datosVerificadosIncorrectos .botonInicioIncorrecto {
+      display: flex;
+      justify-content: center;
+      background-color: rgba(149, 85, 85, 0.5);
+      width: 45vw;
+      border-radius: 10px;
+      color: #3f1010; }
+    #append #datosVerificadosIncorrectos .botonInicioIncorrecto:hover {
+      background-color: rgba(187, 87, 87, 0.5);
+      color: white; }
 
 /****************Catalogo**************/
 .busqueda {
@@ -531,7 +658,15 @@ nav {
   .bi-envelope {
     width: 20px;
     height: 20px;
-    margin: 10px; } }
+    margin: 10px; }
+  #btn-carrito-add {
+    width: 100px;
+    height: 15px;
+    font-size: 10px;
+    float: right;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd; } }
 
 @media only screen and (min-width: 768px) {
   .nav {
